--- a/package.json
+++ b/package.json
@@ -12,16 +12,17 @@
     "classnames": "^2.2.6",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
+    "react-redux": "^7.0.3",
     "react-router-dom": "^5.0.1",
     "react-scripts": "^3.0.1",
     "reactstrap": "^6.4.0",
-    "react-redux": "^7.0.3",
     "redux": "^4.0.1",
     "redux-devtools-extension": "^2.13.8",
     "redux-form": "^8.2.3",
+    "redux-form-input-masks": "^2.0.1",
     "redux-logger": "^3.0.6",
     "redux-promise-middleware": "^6.1.0",
-    "redux-thunk": "^2.3.0"    
+    "redux-thunk": "^2.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
