--- a/package.json
+++ b/package.json
@@ -8,13 +8,18 @@
     "@fortawesome/fontawesome-svg-core": "^1.2.4",
     "@fortawesome/free-solid-svg-icons": "^5.3.1",
     "@fortawesome/react-fontawesome": "^0.1.2",
+    "@material-ui/core": "^4.4.2",
     "bootstrap": "^4.1.3",
     "classnames": "^2.2.6",
     "react": "^16.9.0",
+    "react-currency-input": "^1.3.6",
     "react-dom": "^16.9.0",
+    "react-input-mask": "^2.0.4",
+    "react-number-format": "^4.2.0",
     "react-redux": "^7.0.3",
     "react-router-dom": "^5.0.1",
     "react-scripts": "^3.0.1",
+    "react-text-mask": "^5.4.3",
     "reactstrap": "^6.4.0",
     "redux": "^4.0.1",
     "redux-devtools-extension": "^2.13.8",
